Update survival analysis and mortality summary tables
Removed obsolete intermediary choice and mortality summary CSV files, added new LaTeX tables for mortality summary and male survival tests, and updated survival test statistics. Updated figures and auxiliary files to reflect new data and analysis outputs.

--- a/empirical/empirical_v2.tex
+++ b/empirical/empirical_v2.tex
@@ -73,7 +73,7 @@ For our main analysis we use the following sample selection criteria:
 Our sample consists on 8176 individuals and 497,000 offers, hence indiiduals receive on average 61 annuities offers. This offers differ on the number of guaranteed months and the withdrawal amount (ELD: excedente de libre disposicion). Hence we restrict our sample to offers with 0 guaranteed months and 0 ELD. Then the average individual receives 13 offers. 
 
 
-\input{Tables/IE2_sample_size.tex}
+\input{../Tables/IE2_sample_size.tex}
 
 
 
@@ -92,7 +92,7 @@ Important to note that individuals
 \label{fig:ie0_0}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE0_plot0.png}
+\includegraphics[scale=0.27]{../figures/IE0_plot0.png}
 \end{tabular}
 \end{figure}
 
@@ -105,7 +105,7 @@ Figure \ref{fig:ie0_1} shows the amount of savings of individuals in the sample.
 \label{fig:ie0_1}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE0_plot1.png} 
+\includegraphics[scale=0.27]{../figures/IE0_plot1.png} 
 \end{tabular}
 \end{figure}
 
@@ -120,7 +120,7 @@ NOTE: ANNUITIES WITH PW(GREEN) START FROM 0 IN 2006 HENCE PROBABLY THEY ARE A FI
  \label{fig:ie0_2and3}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE0_plot2.png} & \includegraphics[scale=0.27]{figures/IE0_plot3.png}
+\includegraphics[scale=0.27]{../figures/IE0_plot2.png} & \includegraphics[scale=0.27]{../figures/IE0_plot3.png}
 \end{tabular}
 \end{figure}
 
@@ -133,7 +133,7 @@ Figure \ref{fig:ie0_4} shows the shares for the whole sample as a function of sa
 \label{fig:ie0_4}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE0_plot4.png}
+\includegraphics[scale=0.27]{../figures/IE0_plot4.png}
 \end{tabular}
 \end{figure}
 
@@ -143,7 +143,7 @@ Figure \ref{fig:ie0_5} shows how many guaranteed months people buy.
 \label{fig:ie0_5}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE0_plot5.png}
+\includegraphics[scale=0.27]{../figures/IE0_plot5.png}
 \end{tabular}
 \end{figure}
 
@@ -156,7 +156,7 @@ Figure \ref{fig:ie1_1} the history of the credit rating for selected insurers.
  \label{fig:ie1_1}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE1_credit_history.png}
+\includegraphics[scale=0.27]{../figures/IE1_credit_history.png}
 \end{tabular}
 \end{figure}
 
@@ -175,7 +175,7 @@ Figure \ref{fig:ie3_0} shows the number of external offers that buyers request a
 \caption{}
 \label{fig:ie3_0}
 \centering{}%
-\includegraphics[scale=0.27]{figures/IE3_dist_external_offers.png}
+\includegraphics[scale=0.27]{../figures/IE3_dist_external_offers.png}
 \end{figure}
 
 
@@ -183,7 +183,7 @@ Figure \ref{fig:ie3_0} shows the number of external offers that buyers request a
 \caption{}
 \label{fig:ie3_1}
 \centering{}%
-\includegraphics[scale=0.27]{figures/IE3_dist_external_offers_byyear.png}
+\includegraphics[scale=0.27]{../figures/IE3_dist_external_offers_byyear.png}
 \end{figure}
 
 
@@ -194,13 +194,13 @@ Figure \ref{fig:ie3_2} shows
  \label{fig:ie3_2}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_CDF_number_extoffers.png} &\includegraphics[scale=0.27]{figures/IE3_hazard_number_extoffers.png}
+\includegraphics[scale=0.27]{../figures/IE3_CDF_number_extoffers.png} &\includegraphics[scale=0.27]{../figures/IE3_hazard_number_extoffers.png}
 \end{tabular}
 \end{figure}
 
 
 
-Figure \ref{fig:ie3_3} shows the average number of searches for individuals grouped by their quintile of savings, which is a proxy of income. Specifically an increase of savings by a standard deviation is related to \input{Tables/IE3_coefficient1.tex} additional searches. 
+Figure \ref{fig:ie3_3} shows the average number of searches for individuals grouped by their quintile of savings, which is a proxy of income. Specifically an increase of savings by a standard deviation is related to \input{../Tables/IE3_coefficient1.tex} additional searches. 
 
 
 \begin{figure}[H]
@@ -208,7 +208,7 @@ Figure \ref{fig:ie3_3} shows the average number of searches for individuals grou
 \label{fig:ie3_3}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_search_by_income_quintile.png}
+\includegraphics[scale=0.27]{../figures/IE3_search_by_income_quintile.png}
 \end{tabular}
 \end{figure}
 
@@ -219,12 +219,12 @@ Figure \ref{fig:ie3_4} shows the CDF and hazard rate of searches grouped by savi
 \label{fig:ie3_4}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.26]{figures/IE3_search_CDF_by_income_quintile.png} & \includegraphics[scale=0.26]{figures/IE3_search_hazardrate_by_income_quintile.png}
+\includegraphics[scale=0.26]{../figures/IE3_search_CDF_by_income_quintile.png} & \includegraphics[scale=0.26]{../figures/IE3_search_hazardrate_by_income_quintile.png}
 \end{tabular}
 \end{figure}
 
 
-Figure \ref{fig:ie3_4b} shows the average number of searches for individuals grouped by their gender. Men do on average \input{Tables/IE3_coefficient11.tex} more searches, which does not seem to be economically significant, although it is statistically significant.
+Figure \ref{fig:ie3_4b} shows the average number of searches for individuals grouped by their gender. Men do on average \input{../Tables/IE3_coefficient11.tex} more searches, which does not seem to be economically significant, although it is statistically significant.
 
 
 \begin{figure}[H]
@@ -232,7 +232,7 @@ Figure \ref{fig:ie3_4b} shows the average number of searches for individuals gro
 \label{fig:ie3_4b}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_search_by_gender.png}
+\includegraphics[scale=0.27]{../figures/IE3_search_by_gender.png}
 \end{tabular}
 \end{figure}
 
@@ -260,14 +260,14 @@ We exclude the external offers from the analysis since we expect them to be diff
 
 In row 3 we show the standard deviation of the offers using criteria 2. The average deviation is .51UF which is around 20USD. This dispersion could be justified by intermediaries, ZIP code, particular day, etc. 
 
-\input{Tables/IE3_within_group_dispersion.tex}
+\input{../Tables/IE3_within_group_dispersion.tex}
 
 Finally we run a regression of the offer on the group fixed effects. The coefficients are shown below. When using the finer group definition almost all the variation in offers is explained by the group fixed effects. 
 
 \textbf{In terms of modeling, the previous findings suggest that we can assume that the insurers look at savings, gender and age and send offers based on these characteristics. }
 
 
-\input{Tables/IE3_coefficient2.tex}
+\input{../Tables/IE3_coefficient2.tex}
 
 \subsection{dispersion within group for external and internal offers. }
 
@@ -287,26 +287,26 @@ Figure \ref{fig:ie3_5} shows the distribution of standard deviations of the choi
 \label{fig:ie3_5}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.26]{figures/IE3_dispertion_choice_set.png} & \includegraphics[scale=0.26]{figures/IE3_dispertion_choice_set_range.png}
+\includegraphics[scale=0.26]{../figures/IE3_dispertion_choice_set.png} & \includegraphics[scale=0.26]{../figures/IE3_dispertion_choice_set_range.png}
 \end{tabular}
 \end{figure}
 
 
-\input{Tables/IE3_choiceset_dispersion.tex}
+\input{../Tables/IE3_choiceset_dispersion.tex}
 
 
 \subsubsection{Improvement when asking for external offers}
 
 The table below shows the improvement with respect to the initial offer made by the same company when asking for an external offer. The first row shows summary statistics for the absolute improvement, with a mean of .24 UF which is around 10 USD. The second row shows the improvement in percentage terms. The third column calculates the present value of the improvement, using the assumption that the individual lives 20 years and the monthly interest rate is 0.3\% which has been the average rate of return of the pension funds in the last 20 years \footnote{\href{https://bigdatauls.userena.cl/dashboards/rentabilidad-fondo-de-pensiones/}{source} note that the rate of return is in real terms because all the flows are in UF.}. Finally, to understand the dimension we take the previously calculated present value and divide it by the wage of the last month of the individual, on average the improvement in the offer corresponds to the salary of almost 4 months of work.  
 
-\input{Tables/IE3_offer_improvement.tex}
+\input{../Tables/IE3_offer_improvement.tex}
 
 \begin{figure}[H]
 \caption{}
 \label{fig:aux}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.3]{figures/IE3_offer_improvement_histogram.png}
+\includegraphics[scale=0.3]{../figures/IE3_offer_improvement_histogram.png}
 \end{tabular}
 \end{figure}
 
@@ -318,7 +318,7 @@ Figure \ref{fig:aux} shows the summary statistics of the distribution of the dif
 \label{fig:aux}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.7]{Tables/IE3_offer_improvement_bygender.png}
+\includegraphics[scale=0.7]{../Tables/IE3_offer_improvement_bygender.png}
 \end{tabular}
 \end{figure}
 
@@ -330,7 +330,7 @@ Figure \ref{fig:aux2} shows the summary statistics of the distribution of the di
 \label{fig:aux2}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.7]{Tables/IE3_offer_improvement_byincomequintile.png}
+\includegraphics[scale=0.7]{../Tables/IE3_offer_improvement_byincomequintile.png}
 \end{tabular}
 \end{figure}
 
@@ -340,7 +340,7 @@ Figure \ref{fig:aux2} shows the summary statistics of the distribution of the di
 The table below shows the improvement with respect to the highest initial offer when asking for an external offer. Sometimes the external offer is higher and sometimes lower than the higher internal offer but on average they are the same (the highest initial offer is only .03\% higher than the external offer), but with considerable dispersion, see figure \ref{fig:ie3_6}. 
 
 
-\input{Tables/IE3_offer_change_max_internal.tex}
+\input{../Tables/IE3_offer_change_max_internal.tex}
 
 
 \begin{figure}[H]
@@ -348,7 +348,7 @@ The table below shows the improvement with respect to the highest initial offer 
 \label{fig:ie3_6}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_offer_change_max_internal.png}
+\includegraphics[scale=0.27]{../figures/IE3_offer_change_max_internal.png}
 \end{tabular}
 \end{figure}
 
@@ -358,11 +358,11 @@ The table below shows the improvement with respect to the highest initial offer 
 
 Almost all the insurers bid in the first round. , see table below.
 
-\input{Tables/IE3_number_initial_offers.tex}
+\input{../Tables/IE3_number_initial_offers.tex}
 
 \subsubsection{Discrete choice determinants}
 
-The share of buyers who end up buying an annuity that is not the highest offer is: \input{Tables/IE3_share_acc_highest.tex}. Moreover when they do not buy the highest offer they choose offers which are significantly lower. Figure \ref{fig:ie3_7} shows the distribution of the highest offer minus the chosen offer (foregone amount) as a share of the accepted offer in percentage terms. 
+The share of buyers who end up buying an annuity that is not the highest offer is: \input{../Tables/IE3_share_acc_highest.tex}. Moreover when they do not buy the highest offer they choose offers which are significantly lower. Figure \ref{fig:ie3_7} shows the distribution of the highest offer minus the chosen offer (foregone amount) as a share of the accepted offer in percentage terms.
 
 And the table below shows in the first row the average foregone percentage among the buyers who did not choose the highest offer. 1.5\% might not seem like a lot, but if we assume that the buyer has 20 years of life left and we use a .03\% monthly interest rate  \footnote{previously explained why is sensible} it means they are foregoing almost 20 UF in present value terms, which when divided by the last monthly salary of the individual is around 1.6 months of salary. 
 
@@ -372,15 +372,15 @@ And the table below shows in the first row the average foregone percentage among
 \label{fig:ie3_7}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_foregone_hist.png}
+\includegraphics[scale=0.27]{../figures/IE3_foregone_hist.png}
 \end{tabular}
 \end{figure}
 
-\input{Tables/IE3_foregone.tex}
+\input{../Tables/IE3_foregone.tex}
 
 One possibility is that buyers perceive insurers as differentiated,for example in conversations with a financial advisor they mentioned the importance of risk rating of the insurer\footnote{See conversation with Claudia Ayala (9 jul 25), where she says: \textit{ la clasificación en una Compañía de Seguros es muy importante porque demuestra la espalda financiera de cada una de ellas, como se encuentra en posición al resto, sucursales, spot venta, es decir un servicio completo, EN EL FONDO QUE NOS ENTREGA ... UNA TRANQUILIDAD EN EL PAGO DE PENSIONES FUTURAS}}, the customer service or the brand appeal of the company. 
 
-\input{Tables/IE3_clogit.tex}
+\input{../Tables/IE3_clogit.tex}
 
 To assess the possibility that buyers perceive insurers as differentiated, we run a conditional logit regression on the choice set of the buyers, and as expected we observe that although the primary determinant of the choice is the amount of the offer, the risk rating of the insurer does affect the choice. 
 
@@ -391,16 +391,16 @@ When bargaining for an external offer one can always disclose personal health in
     
     The first table below shows the tabulation of individuals who die in our data (rows) with  a dummy for whether they asked for external offers(cols). Then the second table shows the share of individuals who negotiate an external offer by their current status. Individuals who already died also are less likely to ask for external offers. 
 
-    \input{Tables/IE3_dead_has_external.tex}
+    \input{../Tables/IE3_dead_has_external.tex}
     Then when running a logit model of the probability of asking for an external offer on whether the buyer is dead and year fixed effect, we find that already dead individuals asked for fewer external offers. 
 
-    \textcolor{red}{ to icnrease the sample size I can also use all the other annuities}
+    \textcolor{red}{ to increase the sample size I can also use all the other annuities}
 
 
 
-\input{Tables/IE3_dead_has_external2.tex}
+\input{../Tables/IE3_dead_has_external2.tex}
 
-\input{Tables/IE3_dead_external_logi.tex}
+\input{../Tables/IE3_dead_external_logi.tex}
 \newpage
     \item Sick individuals get higher increases when bargaining 
     
@@ -410,9 +410,9 @@ When bargaining for an external offer one can always disclose personal health in
 
     Then we run a regression of the improvment on the dead dummy and year fixed effects to account for possible trends in negotiation rates in our data. The coefficient is negative which suggests that actually healthier individuals get higher increases in the offers.
 
-    \input{Tables/IE3_ttest_improvement_pct.tex}
+    \input{../Tables/IE3_ttest_improvement_pct.tex}
 
-    \input{Tables/IE3_dead_on_improvements.tex}
+    \input{../Tables/IE3_dead_on_improvements.tex}
 
 
 \end{itemize}
@@ -431,7 +431,7 @@ In figure \ref{fig:ie3_10} we see that insurer 997... sells mostly to rich consu
 \label{fig:ie3_9}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_age_quintile.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_age_quintile.png}
 \end{tabular}
 \end{figure}
 
@@ -440,7 +440,7 @@ In figure \ref{fig:ie3_10} we see that insurer 997... sells mostly to rich consu
 \label{fig:ie3_10}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_income_quintile.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_income_quintile.png}
 \end{tabular}
 \end{figure}
 
@@ -450,8 +450,8 @@ In figure \ref{fig:ie3_10} we see that insurer 997... sells mostly to rich consu
 \label{fig:ie3_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.24]{figures/IE3_supply_age.png} &
-\includegraphics[scale=0.24]{figures/IE3_supply_agebin.png}
+\includegraphics[scale=0.24]{../figures/IE3_supply_age.png} &
+\includegraphics[scale=0.24]{../figures/IE3_supply_agebin.png}
 \end{tabular}
 \end{figure}
 
@@ -476,7 +476,7 @@ One possibility is that the previous pattern is caused by firms not being presen
 \label{fig:ie3_12}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_income_q.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_income_q.png}
 \end{tabular}
 \end{figure}
 
@@ -486,7 +486,7 @@ One possibility is that the previous pattern is caused by firms not being presen
 \label{fig:ie3_13}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_age.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_age.png}
 \end{tabular}
 \end{figure}
 
@@ -496,7 +496,7 @@ One possibility is that the previous pattern is caused by firms not being presen
 \label{fig:ie3_14}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_age_q.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_age_q.png}
 \end{tabular}
 \end{figure}
 
@@ -508,8 +508,8 @@ One possibility is that the previous pattern is caused by firms not being presen
 \label{fig:ie3_15}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_age_q_2012.png} &
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_age_q_2013.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_age_q_2012.png} &
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_age_q_2013.png}
 \end{tabular}
 \end{figure}
 
@@ -519,8 +519,8 @@ One possibility is that the previous pattern is caused by firms not being presen
 \label{fig:ie3_16}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_age_q_2014.png} &
-\includegraphics[scale=0.27]{figures/IE3_supply_offerprob_age_q_2015.png}
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_age_q_2014.png} &
+\includegraphics[scale=0.27]{../figures/IE3_supply_offerprob_age_q_2015.png}
 \end{tabular}
 \end{figure}
 
