--- a/empirical/empirical_v3.tex
+++ b/empirical/empirical_v3.tex
@@ -52,17 +52,16 @@ In this document I will present what we are learnign from out empirical work. Th
 
 The following table shows the coefficients of a conditional logit to test whether customers that ask for an external offer are more price elastic. Odd (even) columns run the specification on the sample with(without) external offers, which we think of as shoppers (non-shoppers). Once we control by the company fixed effects the shopers are more elastic. 
 
-\input{Tables/IE4/IE4_price_elasticity_clogit.tex}
+\input{../Tables/IE4/IE4_price_elasticity_clogit.tex}
  
- 
-\subsection{Firms using more-less external offers}
+ \subsection{Firms using more-less external offers}
 
 \begin{figure}[H]
 \caption{}
  \label{fig:ie4_1}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_int_ext_offers_by_cia.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_int_ext_offers_by_cia.png} 
 \end{tabular}
 \end{figure}
 
@@ -71,12 +70,13 @@ The following table shows the coefficients of a conditional logit to test whethe
  \label{fig:ie4_2and3}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_total_internal_offers_bycompany.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_variation_share_external.png}
+\includegraphics[scale=0.17]{../figures/IE4/IE4_total_internal_offers_bycompany.png} & \includegraphics[scale=0.17]{../figures/IE4/IE4_variation_share_external.png}
 \end{tabular}
 \end{figure} 
 
 \newpage
-
+ 
+ 
 \subsection{Negative correlation credit rating and offers}
 
 Offers with better credit ratings make worse offers, this could reflect cost issues or a less elastic demand. 
@@ -86,7 +86,7 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_4}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_scatter_rating_offer.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_scatter_rating_offer.png} 
 \end{tabular}
 \end{figure}
 
@@ -95,13 +95,12 @@ Offers with better credit ratings make worse offers, this could reflect cost iss
  \label{fig:ie4_5and6}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_binscatter_rating_offer.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_box_rating_offer.png}
+\includegraphics[scale=0.17]{../figures/IE4/IE4_binscatter_rating_offer.png} & \includegraphics[scale=0.17]{../figures/IE4/IE4_box_rating_offer.png}
 \end{tabular}
 \end{figure}
 
 
-
-\input{Tables/IE4/IE4_rating_correlation.tex}
+\input{../Tables/IE4/IE4_rating_correlation.tex}
 
 
 \newpage
@@ -115,13 +114,14 @@ Figure \ref{fig:ie4_7} shows the distribution of external offers by intermediary
  \label{fig:ie4_7}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_intermediary_search_box.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_intermediary_search_box.png} 
 \end{tabular}
 \end{figure}
 
-\input{Tables/ie4/IE4_ttest_full.tex}
+\input{../Tables/ie4/IE4_ttest_full.tex}
 
 
+ 
 \newpage
 
 \subsection{Intermediaries and external offers(2)}
@@ -130,19 +130,20 @@ Table 3 shows the number of external, initial offers received and  the probabili
 
 Table 4 shows the number of external offers and the probability of choosing one of the external offers by intermediary type. Buyers with agents receive the least amount of external offers but are the most likely to choose one of them reflecting that they buy from the agent's company. Whereas buyers with advisors receive more offers but are sligthly less likely to buy  from them. Figure \ref{fig:ie4_10} shows similar data and additionally the probability of choosing an external offer having one in the data, which is similar across groups. 
  
-\input{Tables/IE4/IE4_search_by_intermediary.tex}
+\input{../Tables/IE4/IE4_search_by_intermediary.tex}
 
-\input{Tables/IE4/IE4_search_by_intermediary_type.tex}
+\input{../Tables/IE4/IE4_search_by_intermediary_type.tex}
 
  Figure \ref{fig:ie4_8and9} shows the averaage number of external offers by intermediary tye and the distribution of external offers by having/not having an intermediary. 
 
+ 
  
 \begin{figure}[H]
 \caption{}
  \label{fig:ie4_8and9}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_external_offers_by_intermediary.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_external_distribution_by_intermediary.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_external_offers_by_intermediary.png} & \includegraphics[scale=0.17]{../figures/IE4/IE4_external_distribution_by_intermediary.png} 
 \end{tabular}
 \end{figure} 
  
@@ -151,62 +152,65 @@ Table 4 shows the number of external offers and the probability of choosing one 
  \label{fig:ie4_10}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_external_acceptance_by_intermediary.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_external_acceptance_by_intermediary.png} 
 \end{tabular}
 \end{figure} 
  
 Table 5 shows that intermediariees generally increase the number of external offers, but when desaggregating the effect, agents actually generate less offers and brokers are the ones driving the increase in offers. 
- \input{Tables/ie4/ie4_regression_external.tex}
+ \input{../Tables/ie4/ie4_regression_external.tex}
 
  Table 6, shows that intermediareis increase the chances of accepting an external offer,  conditionaal on having offers, but this is driven mainly by agents and not by brokers.
 
-  \input{Tables/ie4/IE4_logit_choose_external.tex}
+  \input{../Tables/ie4/IE4_logit_choose_external.tex}
 figure \ref{fig:ie4_11} shows that buyers with intermediaries receive more offers along the income distribution. 
   \begin{figure}[H]
 \caption{}
  \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_external_by_income_intermediary.png} 
+\includegraphics[scale=0.27]{../figures/IE4/IE4_external_by_income_intermediary.png} 
 \end{tabular}
 \end{figure} 
 
 \newpage
 
+ 
 \subsection{Choose highest offer and Intermediaries}
 
 Table 7 shows the share of buyers choosing the highest income, the foregone percentage in case (difference between highest and chosen offer) and the total number of offers by income quintile. Richer individuals receive higher offers but there is no clear pattern in the share of buyers choosing the highest offer or in the foregone percentage over income quintiles. Figure \ref{fig:ie4_12} shows the sam pattern of the share of buyers choosing the highest offer by income quintile. 
 
 
-\input{Tables/ie4/IE4_highest_by_income.tex}
+\input{../Tables/ie4/IE4_highest_by_income.tex}
 
   \begin{figure}[H]
 \caption{}
  \label{fig:ie4_12}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_highest_by_income.png} 
+\includegraphics[scale=0.27]{../figures/IE4/IE4_highest_by_income.png} 
 \end{tabular}
 \end{figure} 
 
 Table 8 shows that buyers with intermediaries have a lower likelihood of choosing the highest offer (first row in each subtable) and when they choose lower offers they forego a higher percentage of income (third row of each subtable).
 Figure \ref{fig:ie4_11} shows that actually this effect of intermediaries is driven by sales agents, and buyers with brokers actually choose the highest offer at a higher rate that those without any intermediaries. 
 
-\input{Tables/ie4/IE4_highest_by_intermediary.tex}
+\input{../Tables/ie4/IE4_highest_by_intermediary.tex}
 
+
+ 
 \begin{figure}[H]
 \caption{}
  \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_highest_by_intermediary_type.png} 
-& \includegraphics[scale=0.17]{figures/IE4/IE4_highest_by_intermediary_type(2).png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_highest_by_intermediary_type.png} 
+& \includegraphics[scale=0.17]{../figures/IE4/IE4_highest_by_intermediary_type(2).png} 
 \end{tabular}
 \end{figure} 
  
 Table 9 shos the patterns of table 8 but for buyers with and without external offers. Both types of buyers have a similar rate at which they choose the lower offers, this is not consistent with the idea that external offers are requested from firms with particularly good non-offer characteristics. 
 
-\input{Tables/IE4/IE4_highest_by_external.tex}
+\input{../Tables/IE4/IE4_highest_by_external.tex}
 
 Finally figures \ref{fig:ie4_12and13} show the patterns of the share of buyers choosing the highest offer by income quintile for buyers with and without intermediaries and with and without external offers.
   \begin{figure}[H]
@@ -214,13 +218,12 @@ Finally figures \ref{fig:ie4_12and13} show the patterns of the share of buyers c
  \label{fig:ie4_12and13}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_highest_income_intermediary.png} & \includegraphics[scale=0.17]{figures/IE4/IE4_highest_income_external.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_highest_income_intermediary.png} & \includegraphics[scale=0.17]{../figures/IE4/IE4_highest_income_external.png} 
 \end{tabular}
 \end{figure} 
 
 
-\input{Tables/ie4/IE4_regression_chose_highest.tex}
-
+\input{../Tables/ie4/IE4_regression_chose_highest.tex}
 
 
 
@@ -229,12 +232,12 @@ Finally figures \ref{fig:ie4_12and13} show the patterns of the share of buyers c
  \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_foregone_distribution.png} 
+\includegraphics[scale=0.27]{../figures/IE4/IE4_foregone_distribution.png} 
 \end{tabular}
 \end{figure} 
 
 
-\input{Tables/IE4/IE4_foregone_regression.tex}
+\input{../Tables/IE4/IE4_foregone_regression.tex}
 
 
 \newpage
@@ -247,20 +250,18 @@ External offers are different (\ref{fig:ie4_11}), the difference is significant,
 \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{figures/IE4/IE4_rank_of_accepted_external.png} 
+\includegraphics[scale=0.27]{../figures/IE4/IE4_rank_of_accepted_external.png} 
 \end{tabular}
 \end{figure} 
 
 
-\input{Tables/IE4/IE4_rank_distribution_test.tex}
+\input{../Tables/IE4/IE4_rank_distribution_test.tex}
 
 
- 
-\input{Tables/ie4/IE4_rank_comparison_external_internal.tex}
+\input{../Tables/ie4/IE4_rank_comparison_external_internal.tex}
 
-Table 13 shows that 
-\input{Tables/ie4/IE4_share_best_offers.tex}
-
+Table 13 shows that
+\input{../Tables/ie4/IE4_share_best_offers.tex}
 
 
 
@@ -269,7 +270,7 @@ Table 13 shows that
  \label{fig:ie4_11}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_rank_by_type_income.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_rank_by_type_income.png} 
 \end{tabular}
 \end{figure} 
 
@@ -285,12 +286,14 @@ Figure \ref{fig:ie4_12} shows the mortality curves for the biggest firm.
 \label{fig:ie4_12}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.2]{figures/IE4/IE4_mortality_curves_by_age.png} 
+\includegraphics[scale=0.2]{../figures/IE4/IE4_mortality_curves_by_age.png} 
 \end{tabular}
 \end{figure} 
 
 \subsection{Mortality and survival rates}
 
+
+  
 Figure \ref{fig:ie4_13} shows the share of individuals at each age that die. The left panel is unshmoothed and the right panel is smoothed. We can see that some firms have consistently lower mortalities (e.g. firm2). 
 
 Figure \ref{fig:ie4_14} shows the survival curves for the same firms, where we can see that the survival rates vary across firms.
@@ -299,12 +302,12 @@ Figure \ref{fig:ie4_14} shows the survival curves for the same firms, where we c
 \label{fig:ie4_13}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{figures/IE4/IE4_mortality_rates_unsmoothed.png} 
-& \includegraphics[scale=0.17]{figures/IE4/IE4_mortality_rates_smoothed.png} 
+\includegraphics[scale=0.17]{../figures/IE4/IE4_mortality_rates_unsmoothed.png} 
+& \includegraphics[scale=0.17]{../figures/IE4/IE4_mortality_rates_smoothed.png} 
 \end{tabular}
 \end{figure} 
  
-
+The tables below use different tests to see whether the survival curves are statistically different across firms. We can reject the null hypothesis that they are the same. The first table uses the full sample and the second table uses the sample of men. 
 
  
   \begin{figure}[H]
@@ -312,12 +315,27 @@ Figure \ref{fig:ie4_14} shows the survival curves for the same firms, where we c
  \label{fig:ie4_14}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.2]{figures/IE4/IE4_survival_curves_by_age_top_firms.png} 
+\includegraphics[scale=0.2]{../figures/IE4/IE4_survival_curves_by_age_top_firms.png} 
 \end{tabular}
 \end{figure} 
 
-\input{Tables/ie4/IE4_survival_tests.tex}
+\begin{figure}[H]
+\caption{}
+\label{fig:ie4_15}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.217]{../figures/IE4/IE4_km_curves_by_firm.png} 
+& \includegraphics[scale=0.217]{../figures/IE4/IE4_km_curves_by_firm_males.png} 
+\end{tabular}
+\end{figure} 
+ 
 
 
+
+\input{../Tables/ie4/IE4_survival_tests.tex}
+
+
+
+\input{../Tables/ie4/IE4_survival_tests_males.tex}
 
 \end{document}
