--- a/Tables/IE4/IE4_survival_tests_males.tex
+++ b/Tables/IE4/IE4_survival_tests_males.tex
@@ -5,10 +5,11 @@
             &       tests&            &            \\
             &        Chi2&     P-value&          df\\
 \hline
-Log-rank    &      20.877&      0.0003&           4\\
-Wilcoxon    &      17.844&      0.0013&           4\\
-Stratified\_LR&      15.747&      0.0034&           4\\
+Log-rank    &      30.609&      0.0000&           4\\
+Wilcoxon    &      26.950&      0.0000&           4\\
+Stratified\_LR&      23.175&      0.0001&           4\\
 \hline\hline
+\multicolumn{4}{l}{\footnotesize Sample only includes males.}\\
 \multicolumn{4}{l}{\footnotesize Log-rank test is sensitive to late differences}\\
 \multicolumn{4}{l}{\footnotesize Wilcoxon test weights early times more heavily}\\
 \multicolumn{4}{l}{\footnotesize Stratified log-rank adjusts for 5-year age groups}\\
