Updates from Overleaf

--- a/models/model4_long.tex
+++ b/models/model4_long.tex
@@ -288,6 +288,20 @@ Figure \ref{fig:2} left panel shows the market shares as function of $\sigma$. T
 \end{itemize}
 
 
+\textbf{Effects of firm differentiation}
+
+Consider the case of a homogenous  annuities market, meaning $\delta_j = \delta_A$ for every insurer and $\rho = 0$\footnote{We are not assuming that there are an infinite number of firms.}.
+In what follows we compare the homogeneous case with the heterogeneous case. 
+
+Homogeneity affects prices via changing $w(h)$ in two ways. First, given that $\rho \rightarrow 0$, this increases $w(h)$ for any health status. 
+
+
+
+From equation \ref{eq:price_der} we can see that the marginal consumer will be diverted from other firms and not from the outside option. 
+Given an outside option market share, this will increase costs since the marginal consumer will be healthier.  But of course 
+
+
+ 
 \section{Appendix}
 
 \subsection{Own elasticity in nested logit}\label{sec:appendix1}
